# petpal

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: camera_mapping.md  maintenance.md  project_overview.md  technical_roadmap.md
examples/: petpal_agent.py  petpal_approach.py  petpal_demo.py  petpal_trajectory.py
src/petpal/: __init__.py  agent.py  cli.py  config.py  navigation.py  reports.py  runtime.py  tools.py  trajectories.py  vision.py  voice.py
